# plankton_snake

minerva/minerva_control/: CMakeLists.txt  package.xml
minerva/minerva_control/config/minerva/: pos_pid_control.yaml  thruster_manager.yaml
minerva/minerva_control/launch/: joy_minerva_simulator.launch  thruster_manager.launch  waypoint_control.launch
minerva/minerva_control/scripts/: position_control.py  velocity_control.py
minerva/minerva_description/: CMakeLists.txt  package.xml
minerva/minerva_description/launch/: upload_minerva_default.launch  upload_minerva_default.launch.py
minerva/minerva_description/meshes/: base_link_color.dae  base_link_mesh.dae  inspection_module.dae  link_2_color.dae  link_2_mesh.dae  link_3_color.dae  link_4_mesh.dae  link_5_color.dae  link_5_mesh.dae  prop.dae  thruster_module.dae
minerva/minerva_description/robots/: minerva_default.xacro
minerva/minerva_description/urdf/: minerva.gazebo.xacro  minerva_actuators.xacro  minerva_base.xacro  minerva_sensors.xacro
minerva/minerva_odometry/: package.xml
minerva/minerva_odometry/launch/: minerva_odometry.launch.py
minerva/minerva_odometry/scripts/: odometry.py
minerva_odometry/: CMakeLists.txt  package.xml
minerva_odometry/launch/: minerva_odometry.launch
